--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can ad{d global styles to this file, and also import other style files */
+[class^=ndp-] {
+  box-sizing: border-box;
+  font-family: Roboto, Helvetica Neue, sans-serif;
+  font-size: 13px;
+  color: rgba(0, 0, 0, .87);
+
+  &:before, &:after {
+    box-sizing: border-box;
+  }
+}
+
+.ndp-link {
+  background: transparent;
+  border: 0;
+  outline: 0;
+  text-decoration: underline currentColor;
+  color: #3f51b5;
+  cursor: pointer;
+}
