--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,30 @@
 <app-datepicker
   [disableDays]="disableDays"
   [date]="date" (datePickerReady)="dpApiService = $event">
+  <button (click)="dpApiService.toggleDatepickerMenu()">Open</button>
 </app-datepicker>
 
 
-<button (click)="dpApiService.showToday()">
-  TODAY
-</button>
+<!--<button (click)="dpApiService.showToday()">-->
+<!--  TODAY-->
+<!--</button>-->
 
-<button (click)="dpApiService.unselectDate()">
-  Unselect
-</button>
+<!--<button (click)="dpApiService.unselectDate()">-->
+<!--  Unselect-->
+<!--</button>-->
 
+<!--<button (click)="dpApiService.selectToday()">-->
+<!--  Select Today-->
+<!--</button>-->
 
-<button (click)="dpApiService.selectToday()">
-  Select Today
-</button>
+<!--<button (click)="dpApiService.showSelected()">-->
+<!--  Selected-->
+<!--</button>-->
 
+<!--<button (click)="dpApiService.showPreviousMonth()">-->
+<!--  <-->
+<!--</button>-->
 
-<button (click)="dpApiService.showSelected()">
-  Selected
-</button>
-
-
-
-<button (click)="dpApiService.showPreviousMonth()">
-  <
-</button>
-
-<button (click)="dpApiService.showNextMonth()">
-  >
-</button>
+<!--<button (click)="dpApiService.showNextMonth()">-->
+<!--  >-->
+<!--</button>-->
