--- a/src/app/componenets/datepicker/datepicker.component.html
+++ b/src/app/componenets/datepicker/datepicker.component.html
@@ -1,4 +1,9 @@
-<app-dp-header></app-dp-header>
-<app-dp-days></app-dp-days>
-<app-dp-footer></app-dp-footer>
+<ng-content></ng-content>
 
+<ng-container *ngIf="show$ |async">
+  <div class="datepicker-menu">
+    <app-dp-header></app-dp-header>
+    <app-dp-days></app-dp-days>
+    <app-dp-footer></app-dp-footer>
+  </div>
+</ng-container>
