--- a/src/app/componenets/dp-days/dp-days.component.scss
+++ b/src/app/componenets/dp-days/dp-days.component.scss
@@ -8,7 +8,6 @@
     box-sizing: border-box;
   }
 
-
   .ndp-cell {
     aspect-ratio: 1/1;
     cursor: pointer;
@@ -18,7 +17,7 @@
       pointer-events: none;
 
       .ndp-day {
-        color: rgba(0, 0, 0, .38);
+        color: rgb(0 0 0 / 38%);
       }
     }
 
@@ -38,7 +37,8 @@
       }
     }
 
-    .ndp-day, .ndp-weekday {
+    .ndp-day,
+    .ndp-weekday {
       display: grid;
       place-items: center;
       width: 100%;
@@ -46,18 +46,15 @@
     }
 
     .ndp-weekday {
-      color: rgba(0, 0, 0, .54);
-      border-bottom: 1px solid rgba(0, 0, 0, .12);
+      color: rgb(0 0 0 / 54%);
+      border-bottom: 1px solid rgb(0 0 0 / 12%);
       font-size: 11px;
       font-weight: 400;
     }
 
     &:hover:not(.ndp-not-hover):not(.ndp-disabled) {
-      background: rgba(63, 81, 181, .3);
+      background: rgb(63 81 181 / 30%);
       border-radius: 50%;
     }
-
-
   }
-
 }
