--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can ad{d global styles to this file, and also import other style files */
 [class^="ndp-"] {
   box-sizing: border-box;
-  font-family: Roboto, Helvetica Neue, sans-serif;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 13px;
   color: rgb(0 0 0 / 87%);
 
