--- a/src/app/componenets/dp-header/dp-header.component.scss
+++ b/src/app/componenets/dp-header/dp-header.component.scss
@@ -4,7 +4,7 @@
   grid-template-rows: 40px;
 
   button {
-    background: white;
+    background: var(--ndp-white);
     border: 0;
     cursor: pointer;
     position: relative;
