--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@use "_color.scss.css";
+
 /* You can ad{d global styles to this file, and also import other style files */
 [class^="ndp-"] {
   box-sizing: border-box;
@@ -16,6 +18,6 @@
   border: 0;
   outline: 0;
   text-decoration: underline currentColor;
-  color: #3f51b5;
+  color: var(--ndp-blue);
   cursor: pointer;
 }
