--- a/projects/dp/src/lib/datepicker/datepicker.component.html
+++ b/projects/dp/src/lib/datepicker/datepicker.component.html
@@ -2,8 +2,8 @@
 
 <ng-container *ngIf="show$ |async">
   <div class="datepicker-menu">
-    <app-dp-header></app-dp-header>
-    <app-dp-days></app-dp-days>
-    <app-dp-footer></app-dp-footer>
+    <ndp-header></ndp-header>
+    <ndp-days></ndp-days>
+    <ndp-footer></ndp-footer>
   </div>
 </ng-container>
